Opening a 2.66 blend file in 2.7, a bone appear "rolled but not rolled" #40001

Closed
opened 2014-05-02 23:19:53 +02:00 by Mario Mey · 8 comments

Open the file (sorry the size) in 2.66. It has an armature with only a bone with Z down, roll is 180.

Open the file in 2.7, and Z is up, but roll is 180 too. You can see by the custom shape, too. So, the Actions are broken, unless I roll the bone 180.

Open the file (sorry the size) in 2.66. It has an armature with only a bone with Z down, roll is 180. Open the file in 2.7, and Z is up, but roll is 180 too. You can see by the custom shape, too. So, the Actions are broken, unless I roll the bone 180.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Author
[42-bone-rolled-2.66-2.7.blend](https://archive.blender.org/developer/F86725/42-bone-rolled-2.66-2.7.blend)
Bastien Montagne was assigned by Joshua Leung 2014-05-03 06:55:42 +02:00
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

This issue was referenced by blender/blender-addons-contrib@39dc3bce30

This issue was referenced by blender/blender-addons-contrib@39dc3bce30215a7fbf130912b6025cb258f087e6

This issue was referenced by 39dc3bce30

This issue was referenced by 39dc3bce30215a7fbf130912b6025cb258f087e6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 39dc3bce30.

Closed by commit 39dc3bce30.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40001
No description provided.