Fix T40001: Opening a 2.66 blend file in 2.7, a bone appear "rolled but not rolled".

Looks like some sign was lost in that complex matrix algebra (always be wary of squared values!).